--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "dist",
     "src"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pablojacosta/ckeeditor-component"
+  },
+  "homepage": "https://github.com/pablojacosta/ckeeditor-component",
   "engines": {
     "node": ">=10"
   },
